2009-02-04  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Use db_do instead of db_update.

2000-02-03  Sancho Lerena <slerena@artica.es>

	* pandora_db.pl: BUGFIX. DB Maintance was deleting data older than 24hr
	since commit of 12th January!.
	
	* pandora_wmi, pandora_network, pandora_plugin: Algorithm upgraded. 
	First are executed modules with less margin until be considered down and 
	modules with flag of manual execution.
	
2009-01-30  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Fixed regexp alerts.

2009-01-28  Sancho Lerena <slerena@artica.es>

	* bin/pandora_server: Fixed a typo in call to pandora_writestate() who
	makes server exiting with "Can't call method 'prepare'". That affects only
	to keepalive modules. Thanks to Esben for reporting.

2009-01-26  Sancho Lerena <slerena@artica.es>

	* DB.pm: Fixed NOT behaviour of alerts, now works as supposed to do.
	
	* pandora_db.pl: Deleted pending modules, fixed problems using bad DB
	function.

2009-01-26  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Added a new alert macro (_address_).

2009-01-26  Manuel Arostegui <marostegui@artica.es>

	* util/udp_client: Added to repository. Remote alert execution
	script. To be used in "Command" section of the new alert
	system.

2009-01-24  Raul Mateos <raulofpandora@gmail.com>
	
	* lib/PandoraFMS/Config.pm: Changed some texts for last time. Use tabs
	instead spaces.
	
	* lib/PandoraFMS/Tools.pm: Header updated. Use tabs instead spaces.

2009-01-21  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Changes in multicast change reports.

2009-01-21  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* lib/PandoraFMS/DB.pm: Fixes incremental modules

2009-01-21  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server/lib/PandoraFMS/Config.pm: Updated configuration
	  options.

2009-01-21  Sancho Lerena <slerena@artica.es>

	* pandora_server_upgrade: Script to upgrade to latest version
	Pandora FMS server components / code.
