@@ -1,5 +1,12 @@
 2009-02-04  Ramon Novoa  <rnovoa@artica.es>
 
+	* lib/PandoraFMS/DB.pm: Read template default action on alert
+	  execution.
+
+	* bin/pandora_snmpconsole: Fixed SNMP alerts.
+
+2009-02-04  Ramon Novoa  <rnovoa@artica.es>
+
 	* lib/PandoraFMS/DB.pm: Use db_do instead of db_update.
 
 2000-02-03  Sancho Lerena <slerena@artica.es>
